--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "server": "nodemon backend/server",
     "start": "nodemon --watch backend --exec node backend/server.js"
   },
+
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anup-patidar/one.git"
+  },
+
+
   "keywords": [],
   "author": "",
   "license": "ISC",
