--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anup-patidar/one.git"
+    "url": "git+https://github.com/anup-patidar/askaro.git"
   },
 
 
